--- a/templates/base.html
+++ b/templates/base.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrador</title>
+    <title>RS COBRANZAS</title>
 </head>
 <body>
     <header>
         <h1>Sistema de Pagos</h1>
         <nav>
             <a href="{{ url_for('admin') }}">Admin</a>
-            <a href="{{ url_for('pagos') }}">Pagos de Hoy</a>
+            <a href="{{ url_for('pagos') }}">Pagos de Esta semana </a>
             <a href="{{ url_for('filtrar_pagos') }}">Filtrar Pagos</a>
         </nav>
     </header>
